force-app/main/default/objects/Interview_Feedback__c/Interview_Feedback__c.object-meta.xml
<CustomObject>
    <label>Interview Feedback</label>
    <nameField>
        <label>Interview Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>