force-app/main/default/objects/Interview_Feedback__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <label>Communication Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>