force-app/main/default/objects/Interview_Feedback__c/fields/Problem_Solving_Rating__c.field-meta.xml
<CustomField>
    <fullName>Problem_Solving_Rating__c</fullName>
    <label>Problem Solving Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>