force-app/main/default/objects/Interview_Feedback__c/fields/Technical_Rating__c.field-meta.xml
<CustomField>
    <fullName>Technical_Rating__c</fullName>
    <label>Technical Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>